Refactor IEEE CDF model to use JSapar for file schema management and parsing
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>